moving slider component into form, showing image preview on add, and styling sliders after submit

--- a/src/components/movie/MoviePage.css
+++ b/src/components/movie/MoviePage.css
@@ -1,3 +1,24 @@
 img {
   width: 100%;
 }
+
+.image-slider{
+  background-color: grey;
+}
+
+/*Overriding slick settings*/
+.slick-next{
+  right: 0px;
+}
+
+.slick-left{
+  left: 0px;
+}
+
+.slick-prev:before {
+  color: black;
+}
+
+.slick-next:before {
+  color: black;
+}
