better form validation

--- a/src/components/movie/MovieList.scss
+++ b/src/components/movie/MovieList.scss
@@ -9,7 +9,7 @@
     position: absolute;
     @extend %font-sh-extra-large;;
     color: $m-blue-text;
-    margin-left: 62%;
+    margin-left: 130px;
     transition: 1s;
     z-index: 99;
     cursor: pointer;
