--- a/src/components/movie/MovieList.scss
+++ b/src/components/movie/MovieList.scss
@@ -5,26 +5,32 @@
 .col-lg-2{
   position: relative;
   padding: 0;
-  .trash-icon {
-    position: absolute;
-    @extend %font-sh-extra-large;;
-    color: $m-blue-text;
-    transition: 1s;
-    z-index: 99;
-    margin-left: 1%;
-    cursor: pointer;
-    &:hover{
-      transition: 0.5s;
-      color: $xd-blue-text;
+  background-color: $extra-light-blue;
+  border-radius: 5px;
+  .slick-slider{
+    margin-top: 15px;
+    .trash-icon {
+      position: absolute;
+      @extend %font-sh-extra-large;;
+      color: $m-blue-text;
+      transition: 1s;
+      z-index: 99;
+      margin-left: 1%;
+      cursor: pointer;
+      &:hover{
+        transition: 0.5s;
+        color: $xd-blue-text;
+      }
     }
   }
-  &:hover {
-
-  }
   .info {
-    h2 {
+    h4 {
       padding-top: 0;
       margin-top: 0;
+    }
+    [class*=col]{
+      padding-left: 0px;
+      padding-right: 0px
     }
   }
 }
